# django-proj-samples

./: .gitignore  Dockerfile  README.md  docker-compose.yml  others.txt  requirements.txt
ProyectoWeb/: Dockerfile  manage.py
ProyectoWeb/blog/: urls.py  (+1 more)
google-cloud/: Dockerfile  entrypoint.sh  settings.py  setup.sh
spykes/django-admin-school/src/: entrypoint.sh  pyproject.toml  requirements.txt  unversioned-requirements.txt
spykes/django-admin-school/src/agencies/: admin.py  models.py
spykes/django-admin-school/src/agencies/migrations/: 0001_initial.py  0002_initial.py
spykes/django-admin-school/src/core/: cryptography.py  settings.py  urls.py  views.py  wsgi.py
spykes/django-admin-school/src/locale/en/LC_MESSAGES/: django.po
spykes/django-admin-school/src/locale/es/LC_MESSAGES/: django.po
spykes/django-admin-school/src/pdf/: admin.py  apps.py  models.py  signals.py
spykes/django-admin-school/src/pdf/migrations/: 0001_initial.py
spykes/django-admin-school/src/practices/: admin.py  models.py
spykes/django-admin-school/src/practices/migrations/: 0001_initial.py  0002_initial.py
spykes/django-admin-school/src/residences/: admin.py  models.py
spykes/django-admin-school/src/templates/core/: 403.html
spykes/django-admin-school/src/user/: admin.py  apps.py  models.py  signals.py
spykes/django-admin-school/src/user/migrations/: 0001_initial.py  0002_alter_appuser_first_name_alter_appuser_last_name_and_more.py
spykes/django-admin-school/src/vacations/: admin.py  models.py
spykes/django-admin-school/src/vacations/migrations/: 0001_initial.py
(+108 files in other folders)
